added zero duration bug handling

--- a/test/static/index-mapbox.html
+++ b/test/static/index-mapbox.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
-        <script src='https://cdn.jsdelivr.net/npm/sift@13.3.5/index.min.js'></script>
+        <script src='https://cdn.jsdelivr.net/npm/sift@13.3.5/sift.min.js'></script>
         <script src='https://unpkg.com/@turf/turf@3.8.0/turf.min.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
         <script src="./engines/mapbox.js"></script>
