--- a/test/static/demo-leaflet.html
+++ b/test/static/demo-leaflet.html
@@ -1,16 +1,29 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <!--<script src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js'></script>
+        <link href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css' rel='stylesheet' />-->
+        <script src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js'></script>
+        <link href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css' rel='stylesheet' />
         <script src='https://unpkg.com/@turf/turf@3.8.0/turf.min.js'></script>
-        <script src='https://cdn.jsdelivr.net/npm/sift@13.3.5/sift.csp.min.js'></script>
-        <script>
-            //import sft as 'sift';
-            //window.sift = sft;
-            //console.log('SFT', sft);
-        </script>
-        <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css"></link>
-        <script src="./engines/openlayers.js"></script>
-        <script src="./keyhole.js"></script>
+        <script type="importmap">{ "imports" :{
+            "browser-or-node":"https://unpkg.com/browser-or-node@2.1.1/src/index.js", 
+            "@environment-safe/package" : "https://unpkg.com/@environment-safe/package@0.1.3/src/index.mjs",
+            "@environment-safe/elements" : "https://unpkg.com/@environment-safe/elements/src/index.mjs",
+            "sift": "/node_modules/sift/es5m/index.js",
+            "module": "https://unpkg.com/browser-or-node@2.1.1/src/index.js",
+            "node:events": "https://unpkg.com/extended-emitter@1.3.2/node-events.mjs",
+            "@turf/bbox":"https://cdn.jsdelivr.net/npm/@turf/bbox@6.5.0/dist/es/index.js",
+            "@turf/bbox-polygon":"https://cdn.jsdelivr.net/npm/@turf/bbox-polygon@6.5.0/dist/es/index.js",
+            "@turf/polygon":"https://cdn.jsdelivr.net/npm/@turf/polygon@6.5.0/dist/es/index.js",
+            "@turf/multi-polygon":"https://cdn.jsdelivr.net/npm/@turf/multi-polygon@6.5.0/dist/es/index.js",
+            "@turf/difference":"https://cdn.jsdelivr.net/npm/@turf/difference@6.5.0/dist/es/index.js",
+            "@turf/combine":"https://cdn.jsdelivr.net/npm/@turf/combine@6.5.0/dist/es/index.js",
+            "@turf/helpers":"https://cdn.jsdelivr.net/npm/@turf/helpers@6.5.0/dist/es/index.js",
+            "@turf/meta":"https://cdn.jsdelivr.net/npm/@turf/meta@6.5.0/dist/es/index.js",
+            "path": "https://unpkg.com/browser-or-node@2.1.1/src/index.js"
+        }}</script>
+        <title>SkeletonKeyhole :: Leaflet Demo</title>
         <style>
             #somethign{
                 height: 100%;
@@ -27,11 +40,25 @@
                 alert(JSON.stringify(feature))
             }
         </script>
+        <script type="module">
+            import '../../src/engines/leaflet.mjs';
+            import { 
+                SkeletonKeyhole 
+            } from '../../src/index.mjs';
+        </script>
+        <style>
+            .map-container{
+                height: 100%;
+                width: 100%;
+                position:absolute;
+                display: block;
+            }
+        </style>
     </head>
     <body>
         <div class="map-container">
             <skeleton-keyhole
-                engine="openlayers"
+                engine="leaflet"
                 identifier="somethign"
                 token="no-token"
                 zoom="19"
@@ -39,7 +66,7 @@
                 center-on="mask"
             >
                 <keyhole-tiles
-                    url="https://stamen-tiles.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}.png"
+                    url="https://tile.openstreetmap.org/{z}/{x}/{y}.png"
                 ></keyhole-tiles>
                 <keyhole-data
                     name="plots"
@@ -55,7 +82,7 @@
                     property="measurement"
                     text-color="#FFFFFF"
                     stroke-color="#222222"
-                    filter='{"properties": {"measurement" : {"$eq": 0}}}'
+                    filter='{"properties.measurement" : {"$eq": 0}}'
                 ></keyhole-shapes>
                 <keyhole-shapes
                     name="test-2"
@@ -63,16 +90,11 @@
                     fill-color="#4400FF"
                     fill-opacity="0.3"
                     stroke-color="#222222"
-                    filter='{"properties": {"measurement" : {"$eq": 1}}}'
+                    filter='{"properties.measurement" : {"$eq": 1}}'
                 ></keyhole-shapes>
-                <!--<keyhole-data
-                    name="mask"
-                    data='{"type":"Feature","properties":{},"geometry":{"type":"Polygon","coordinates":[[[-83.69646281003952,32.884227314652975],[-83.6963501572609,32.883558338353986],[-83.69461476802826,32.8835425711749],[-83.69482666254044,32.88446607264801],[-83.69646281003952,32.884227314652975]]]}}'
-                    invert="true"
-                ></keyhole-data>-->
                 <keyhole-data
                     name="mask"
-                    data='{"type":"FeatureCollection","features":[{"id":"3bfb86d99827f467c6275f02c305f0b1","type":"Feature","properties":{},"geometry":{"coordinates":[[[-83.6962189,32.8837571],[-83.696208,32.8838063],[-83.6962029,32.8838558],[-83.6962034,32.8839055],[-83.6962096,32.8839553],[-83.6962096,32.8839567],[-83.6962093,32.8839581],[-83.6962087,32.8839594],[-83.6962078,32.8839606],[-83.6962066,32.8839617],[-83.6962052,32.8839625],[-83.6962037,32.8839631],[-83.6962021,32.8839635],[-83.6955727,32.884049],[-83.6955709,32.8840491],[-83.6955691,32.8840489],[-83.6955674,32.8840484],[-83.6955659,32.8840476],[-83.6955646,32.8840466],[-83.6955635,32.8840454],[-83.6955628,32.8840441],[-83.6955623,32.8840426],[-83.6955275,32.8838429],[-83.6955274,32.8838414],[-83.6955277,32.8838399],[-83.6955283,32.8838385],[-83.6955292,32.8838373],[-83.6955303,32.8838362],[-83.6955318,32.8838353],[-83.6955333,32.8838347],[-83.695535,32.8838343],[-83.6962087,32.8837482],[-83.6962104,32.8837482],[-83.6962121,32.8837484],[-83.6962137,32.8837488],[-83.6962152,32.8837495],[-83.6962165,32.8837504],[-83.6962176,32.8837516],[-83.6962184,32.8837528],[-83.6962189,32.8837542],[-83.696219,32.8837556],[-83.6962189,32.8837571]]],"type":"Polygon"}}]}'
+                    data='{"type":"Feature","properties":{},"geometry":{"type":"Polygon","coordinates":[[[-83.69646281003952,32.884227314652975],[-83.6963501572609,32.883558338353986],[-83.69461476802826,32.8835425711749],[-83.69482666254044,32.88446607264801],[-83.69646281003952,32.884227314652975]]]}}'
                     invert="true"
                 ></keyhole-data>
                 <keyhole-shapes
