--- a/test/static/demo-leaflet.html
+++ b/test/static/demo-leaflet.html
@@ -41,7 +41,7 @@
             }
         </script>
         <script type="module">
-            import '../../src/engines/leaflet.mjs';
+            import '../../src/leaflet.mjs';
             import { 
                 SkeletonKeyhole 
             } from '../../src/index.mjs';
