--- a/test/static/demo-mapbox.html
+++ b/test/static/demo-mapbox.html
@@ -41,7 +41,7 @@
             }
         </script>
         <script type="module">
-            import '../../../src/engines/mapbox.mjs';
+            import '../../../src/mapbox.mjs';
             import '../../../src/index.mjs';
         </script>
         <style>
