--- a/test/static/demo-leaflet.html
+++ b/test/static/demo-leaflet.html
@@ -10,6 +10,7 @@
             "browser-or-node":"https://unpkg.com/browser-or-node@2.1.1/src/index.js", 
             "@environment-safe/package" : "https://unpkg.com/@environment-safe/package@0.1.3/src/index.mjs",
             "@environment-safe/elements" : "https://unpkg.com/@environment-safe/elements/src/index.mjs",
+            "@environment-safe/tween" : "https://unpkg.com/@environment-safe/tween/src/index.mjs",
             "sift": "/node_modules/sift/es5m/index.js",
             "module": "https://unpkg.com/browser-or-node@2.1.1/src/index.js",
             "node:events": "https://unpkg.com/extended-emitter@1.3.2/node-events.mjs",
@@ -21,6 +22,8 @@
             "@turf/combine":"https://cdn.jsdelivr.net/npm/@turf/combine@6.5.0/dist/es/index.js",
             "@turf/helpers":"https://cdn.jsdelivr.net/npm/@turf/helpers@6.5.0/dist/es/index.js",
             "@turf/meta":"https://cdn.jsdelivr.net/npm/@turf/meta@6.5.0/dist/es/index.js",
+            "extended-emitter": "/node_modules/extended-emitter/extended-emitter.mjs",
+            "node:events": "/node_modules/extended-emitter/node-events.mjs",
             "path": "https://unpkg.com/browser-or-node@2.1.1/src/index.js"
         }}</script>
         <title>SkeletonKeyhole :: Leaflet Demo</title>
