--- a/test/static/demo-miniplot.html
+++ b/test/static/demo-miniplot.html
@@ -64,19 +64,27 @@
                 token="no-token"
                 zoom="19"
                 center="[21, 25]"
+                debug
             >
                 <keyhole-tiles
                     url="https://tile.openstreetmap.org/{z}/{x}/{y}.png"
                 ></keyhole-tiles>
+                <!--<keyhole-tiles
+                    url="http://localhost:3000/minimap/basemap/{z}/{x}/{y}/tile.png?level=oo"
+                ></keyhole-tiles>-->
             </skeleton-keyhole>
         </div>
         <script type="module">
-            setTimeout(()=>{
+            setTimeout(async ()=>{
                 const plot = document.getElementById('plot')
-                plot.animateTo([
+                await plot.animateTo([
                     40,
                     40
                 ], 5000);
+                /*await plot.animateTo([
+                    40,
+                    10
+                ], 5000);*/
             }, 2000);
         </script>
     </body>
